feat: task 단일 조회, 전체조회 로직 생성